feat: first batch of unit tests